website/versioned_docs/version-2.0.x/reference/subsystems/pylint.mdx
---
title: pylint
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The PyLint linter for Python code (https://www.pylint.org/).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[pylint]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]pylint-skip`}
  env_repr="PANTS_PYLINT_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Pylint when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`
</Option>

### `args`

<Option
  cli_repr={`--pylint-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_PYLINT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Pylint, e.g.
  `--pylint-args="--ignore=foo.py,bar.py --disable=C0330,W0311"`
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--pylint-version=<str>`}
  env_repr="PANTS_PYLINT_VERSION"
  default_repr={`pylint>=2.4.4,<2.5`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--pylint-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PYLINT_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `entry_point`

<Option
  cli_repr={`--pylint-entry-point=<str>`}
  env_repr="PANTS_PYLINT_ENTRY_POINT"
  default_repr={`pylint`}
>
  The main module for the tool. Usually, you will not want to change this from
  the default.
</Option>

### `config`

<Option
  cli_repr={`--pylint-config=<file_option>`}
  env_repr="PANTS_PYLINT_CONFIG"
  default_repr={`None`}
>
  Path to `pylintrc` or alternative Pylint config file
</Option>

### `source_plugins`

<Option
  cli_repr={`--pylint-source-plugins="[<target_option>, <target_option>, ...]"`}
  env_repr="PANTS_PYLINT_SOURCE_PLUGINS"
  default_repr={`[]`}
>
  An optional list of `pylint_source_plugin` target addresses. This allows you
  to load custom plugins defined in source code. Run `./pants help
  pylint_source_plugin` for instructions, including how to load third-party
  plugins.
</Option>

## Deprecated options

### `interpreter_constraints`

<Option
  cli_repr={`--pylint-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PYLINT_INTERPRETER_CONSTRAINTS"
  default_repr={`[]`}
  removal_version="2.1.0.dev0"
  removal_hint={
    "This option no longer does anything, as Pants auto-configures the interpreter constraints for pylint based on your code's interpreter constraints."
  }
>
  Python interpreter constraints for this tool.
</Option>

</span>

